fixed logo position on mobile

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -42,15 +42,13 @@ nav {
   justify-content: center;
   align-items: center;
   margin: 0;
-  * {
+  p {
     text-transform: uppercase;
     color: $color1;
     font-family: Raleway;
     font-weight: 300;
     text-align: center;
     letter-spacing: 4px;
-  }
-  p {
     font-size: 8px;
   }
 }
@@ -139,7 +137,11 @@ footer {
   }
   nav {
     margin: 0 auto;
+    padding: 50px 0;
     width: 100%;
+  }
+  #signlogo {
+    width: 200px;
   }
   header {
     background-size: 350px;
